# banquo-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml  release.yaml  test.yaml
banquo/: __init__.py  _banquo_impl.pyi  core.py  expressions.py  operators.py  stl.py  trace.py
src/: lib.rs  metric.rs  operators.rs  stl.rs  traces.rs
tests/: test_operators.py  test_stl.py
