[package]
name = "banquo-python"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_banquo_impl"
crate-type = ["cdylib"]

[dependencies]
banquo = { version = "0.1.1", path = "../banquo/banquo", features = ["parser"] }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
